--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Kimutai Kenneth Kipchumba</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>22 April, 2000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>kenzkim902@gmail.com</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>kenzkim@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone Number: </span> <span>+254-701-212-117</span></li>
 		            </ul>
 		          </div>
